[package]
name = "ed25519-dalek-bip32"
version = "0.2.0"
authors = ["Julian Popescu <jpopesculian@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://www.uuhb.com"
documentation = "https://docs.rs/ed25519-dalek-bip32/"
repository = "https://github.com/gaokanxu/curve25519-dalek.git"
description = "Simplified ed25519 BIP32 derivations"
keywords = ["derivation", "BIP32", "ed25519", "trezor", "blockchain"]
categories = ["cryptography", "no-std"]

[features]
default = ["std"]
std = ["derivation-path/std", "sha2/std", "ed25519-dalek/std"]

[dependencies]
derivation-path = { version = "0.2.0", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
hmac = { version = "0.12.1", default-features = false }
ed25519-dalek = { path = "../ed25519-dalek", default-features = false, features = ["u64_backend", "rand"] }

[dev-dependencies]
hex = "0.4.3"
