[package]
name = "ed25519-dalek"
version = "2.1.1"
edition = "2021"
authors = [
    "isis lovecruft <isis@patternsinthevoid.net>",
    "Tony Arcieri <bascule@gmail.com>",
    "Michael Rosenberg <michael@mrosenberg.pub>"
]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/dalek-cryptography/curve25519-dalek/tree/main/ed25519-dalek"
homepage = "https://github.com/dalek-cryptography/curve25519-dalek"
documentation = "https://docs.rs/ed25519-dalek"
keywords = ["cryptography", "ed25519", "curve25519", "signature", "ECC"]
categories = ["cryptography", "no-std"]
description = "Fast and efficient ed25519 EdDSA key generations, signing, and verification in pure Rust."
exclude = [ ".gitignore", "TESTVECTORS", "VALIDATIONVECTORS", "res/*" ]
rust-version = "1.76"

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header", "docs/assets/rustdoc-include-katex-header.html",
    "--cfg", "docsrs",
]
features = ["batch", "digest", "hazmat", "pem", "serde"]

[dependencies]
sha2 = { version = "0.10", default-features = false }
subtle = { version = "2.3.0", default-features = false }
rand = "0.8.5"
blake2 = "0.10"
sha3 = "0.10.3"
hex = "0.4.3"
bincode = "1.3.3"
digest = "0.10.7"

criterion = { version = "0.5", features = ["html_reports"] }
hex-literal = "0.4"
toml = { version = "0.8.10" }
merlin = { version = "3", default-features = false, optional = true }
rand_core = { version = "0.6.4", default-features = false, optional = true }
serde = { version = "1.0.204", default-features = false, optional = true, features = ["derive"] }
serde_json = "1.0.114"
zeroize = { version = "1.8.1", default-features = false, optional = true }
zeroize_derive = "1.4.2"

curve25519-dalek = { path = "../curve25519-dalek", default-features = false, features = ["alloc", "precomputed-tables", "zeroize", "digest"] }
ed25519 = { path = "../ed25519", default-features = false }
signature = { path = "../signature", optional = true, default-features = false }
x25519-dalek = { path = "../x25519-dalek", default-features = false, features = ["static_secrets"] }

[[bench]]
name = "ed25519_benchmarks"
harness = false
required-features = ["rand_core"]

[features]
default = ["fast", "std", "zeroize"]
alloc = ["curve25519-dalek/alloc", "ed25519/alloc", "serde?/alloc", "zeroize/alloc"]
std = ["alloc", "ed25519/std", "serde?/std", "sha2/std"]

asm = ["sha2/asm"]
batch = ["alloc", "merlin", "rand_core"]
fast = ["curve25519-dalek/precomputed-tables"]
digest = ["signature/digest"]
# Exposes the hazmat module
hazmat = []
# Turns off stricter checking for scalar malleability in signatures
legacy_compatibility = ["curve25519-dalek/legacy_compatibility"]
pkcs8 = ["ed25519/pkcs8"]
pem = ["alloc", "ed25519/pem", "pkcs8"]
rand_core = ["dep:rand_core"]
serde1111 = ["dep:serde", "ed25519/serde"]
zeroize = ["dep:zeroize", "curve25519-dalek/zeroize"]

#2024.08.02 gaokanxu
rand = []
u64_backend = []
